[gd_scene load_steps=9 format=3 uid="uid://cgdvbroy6c7s7"]

[ext_resource type="Theme" uid="uid://bak616j14hm58" path="res://tilesets/game_ui_theme.tres" id="1_x3drg"]
[ext_resource type="Texture2D" uid="uid://0cffdk2c8ajq" path="res://assets/art/Basic_tools_and_meterials.png" id="2_5rm0k"]
[ext_resource type="Script" path="res://scripts/Ui/inventory_panel.gd" id="2_7qwhb"]
[ext_resource type="Texture2D" uid="uid://bru7qbddfgcn5" path="res://assets/art/Basic_Plants.png" id="3_meey4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kh7pb"]
atlas = ExtResource("2_5rm0k")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4lso"]
atlas = ExtResource("2_5rm0k")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ghbb"]
atlas = ExtResource("3_meey4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmt0v"]
atlas = ExtResource("3_meey4")
region = Rect2(80, 16, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_x3drg")
theme_type_variation = &"Dark_Wood_Panel"
script = ExtResource("2_7qwhb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"Inventory_Item_Panel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_kh7pb")

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"Inventory_Label"
text = "0
"

[node name="Stone" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"Inventory_Item_Panel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_u4lso")

[node name="StoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"Inventory_Label"
text = "0
"

[node name="Corn" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"Inventory_Item_Panel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_4ghbb")

[node name="CornLabel" type="Label" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"Inventory_Label"
text = "0
"

[node name="Tomato" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"Inventory_Item_Panel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_gmt0v")

[node name="TomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"Inventory_Label"
text = "0
"
